--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       }
 
       .loading {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
