--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
         width: 50px;
         height: 50px;
         border-radius: 25px;
-        border-top: 3px solid #ccd1d5;
+        border: 3px solid transparent;
+        border-top-color: #ccd1d5;
         animation: rotate 1s linear infinite;
       }
     </style>
