--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Game of Thrones Season 8 Bingo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.bundle.js"></script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Sawarabi+Mincho');
