--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.bundle.js"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Sawarabi+Mincho');
+      @import url('https://fonts.googleapis.com/css?family=Mukta:300');
 
       body {
-        font-family: 'Sawarabi Mincho', Helvetica, sans-serif;
+        font-family: 'Mukta', Helvetica, sans-serif;
         background-color: #001b31;
         color: #ccd1d5;
       }
